--- a/index.html
+++ b/index.html
@@ -12,8 +12,68 @@
 
 <body>
 	<div class="container">
-		<h1>dear reader</h1>
-		fart? <b>poop</b>
+		<h3 class="blue-text">add-ons</h3>
+
+		<div class="row">
+			<div class="col s12 l6">
+				<div class="card">
+					<div class="card-image">
+						<img src="http://i.imgur.com/LRZ0rW9.png">
+						<span class="card-title">Ropes</span>
+					</div>
+					<div class="card-content">
+						<p>Ropes are aesthetic wires with customizable colour, size, and slack created through use of the event system.</p>
+					</div>
+					<div class="card-action">
+						<a class="btn waves-effect waves-light blue white-text" href="http://forum.blockland.us/index.php?topic=288889.0"><i class="material-icons">more</i></a>
+						<a class="btn waves-effect waves-light green white-text" href="dl/Server_Ropes.zip"><i class="material-icons">file_download</i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col s12 l6">
+				<div class="card">
+					<div class="card-image">
+						<img src="http://i.imgur.com/wF1Rz63.png">
+						<span class="card-title">Text Signs</span>
+					</div>
+					<div class="card-content">
+						<p>Text Signs are floating, fully configurable collisionless text boxes that are spawned by bricks. They have the same font as the default print letters, and even support more characters. Bricks can only have one text sign attached to it at a time.</p>
+					</div>
+					<div class="card-action">
+						<a class="btn waves-effect waves-light blue white-text" href="http://forum.blockland.us/index.php?topic=288889.0"><i class="material-icons">more</i></a>
+						<a class="btn waves-effect waves-light green white-text" href="dl/Server_Text_Signs.zip"><i class="material-icons">file_download</i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col s12 l6">
+				<div class="card">
+					<div class="card-image">
+						<img src="http://i.imgur.com/5zjaSAk.jpg">
+						<span class="card-title">Stride</span>
+					</div>
+					<div class="card-content">
+						<p>Stride is an advanced, easy-to-configure footstep & footprint addon. You can assign sounds and properties to individual paint colours (or event individual bricks, if you want).</p>
+					</div>
+					<div class="card-action">
+						<a class="btn waves-effect waves-light blue white-text" href="http://forum.blockland.us/index.php?topic=288889.0"><i class="material-icons">more</i></a>
+						<a class="btn waves-effect waves-light green white-text" href="dl/Server_Stride.zip"><i class="material-icons">file_download</i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col s12 l6">
+				<div class="card">
+					<div class="card-content">
+					<span class="card-title">Fake Reset</span>
+						<p>Fake Reset adds a /onMiniGameReset command for admins that calls the input event on all bricks.</p>
+					</div>
+					<div class="card-action">
+						<a class="btn waves-effect waves-light blue white-text" href="http://forum.blockland.us/index.php?topic=288889.0"><i class="material-icons">more</i></a>
+						<a class="btn waves-effect waves-light green white-text" href="dl/Server_Fake_Reset.zip"><i class="material-icons">file_download</i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
 	</div>
 	<!--Import jQuery before materialize.js-->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
