--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					</div>
 					<div class="card-action">
 						<a class="btn waves-effect waves-light blue white-text" href="http://forum.blockland.us/index.php?topic=288889.0"><i class="material-icons">more</i></a>
-						<a class="btn waves-effect waves-light green white-text" href="dl/Server_Stride.zip"><i class="material-icons">file_download</i></a>
+						<a class="btn waves-effect waves-light green white-text" href="https://github.com/zapk/Server_Stride/releases/latest"><i class="material-icons">file_download</i></a>
 					</div>
 				</div>
 			</div>
